[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'CryptoParser'
version = '1.0.0'
description = 'An analysis oriented security protocol parser and generator'
authors = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
maintainers = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Framework :: tox',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python',
    'Topic :: Internet',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing :: Traffic Generation',
    'Topic :: Software Development :: Testing',
]

keywords=['ssl', 'tls', 'gost', 'ja3', 'ldap', 'rdp', 'ssh', 'hsts', 'dns']
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {text = 'MPL-2.0'}

dependencies = [
    'asn1crypto',
    'attrs',
    'cryptodatahub==1.0.0',
    'python-dateutil',
    'urllib3',
]

[project.optional-dependencies]
tests = [
    'pyfakefs',
]
docs = [
    'sphinx',
    'sphinx-sitemap',
]

[project.urls]
Homepage = 'https://gitlab.com/coroner/cryptoparser'
Changelog = 'https://cryptoparser.readthedocs.io/en/latest/changelog'
Documentation = 'https://cryptoparser.readthedocs.io/en/latest/'
Issues = 'https://gitlab.com/coroner/cryptoparser/-/issues'
Source = 'https://gitlab.com/coroner/cryptoparser'

[tool.variables]
technical_name = 'cryptoparser'

[tool.setuptools]
license-files = ['LICENSE.txt']

[tool.setuptools.packages.find]
exclude = ['submodules']

[tool.tox]
envlist = [
    'pep8',
    'pylint',
    'pypy3',
    'py39',
    'py310',
    'py311',
    'py312',
    'py313',
    'pythonrc',
]

[tool.tox.env_run_base]
deps = ['coverage', '.[tests]']
commands = [
    ['coverage', 'erase'],
    ['coverage', 'run', '-m', 'unittest', 'discover', '-v'],
    ['coverage', 'report']
]

[tool.tox.env.pep8]
deps = ['flake8']
commands = [['flake8', 'cryptoparser', 'docs', 'test']]

[tool.tox.env.pylint]
deps = ['pylint', '.[tests]']
commands = [['pylint', '--rcfile', '.pylintrc', 'cryptoparser', 'docs', 'test']]
