[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'CryptoParser'
version = '1.4.0'
description = 'An analysis oriented security protocol parser and generator'
authors = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
maintainers = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python',
    'Topic :: Internet',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing :: Traffic Generation',
    'Topic :: Software Development :: Testing',
]

keywords=['ssl', 'tls', 'gost', 'ja3', 'ldap', 'rdp', 'ssh', 'hsts', 'dns', 'ike']
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {text = 'MPL-2.0'}

dependencies = [
    'asn1crypto',
    'attrs',
    'cryptodatahub==1.4.0',
    'urllib3',
]

[project.optional-dependencies]
tests = [
    'pyfakefs',
    'coverage',
]
docs = [
    'sphinx',
    'sphinx-sitemap',
    'docutils',
]

[project.urls]
Homepage = 'https://gitlab.com/coroner/cryptoparser'
Changelog = 'https://cryptoparser.readthedocs.io/en/latest/changelog'
Documentation = 'https://cryptoparser.readthedocs.io/en/latest/'
Issues = 'https://gitlab.com/coroner/cryptoparser/-/issues'
Source = 'https://gitlab.com/coroner/cryptoparser'

[tool.variables]
technical_name = 'cryptoparser'

[tool.setuptools.packages.find]
exclude = ['submodules']

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.lint]
select = ['E', 'F', 'W', 'UP', 'B']
